--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,7 +14,7 @@
 				"-std=c++23",
  				"-Mmodules",
 				"-I",
-				"${vcpkgRoot}/**"
+				"${vcpkgRoot}\\**"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
