--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,8 +3,8 @@
 	"tasks": [
 		{
 			"type": "cppbuild",
-			"label": "C/C++: g++.exe build active file",
-			"command": "D:\\msys64\\mingw64\\bin\\g++.exe",
+			"label": "C/C++: gcc.exe 生成活动文件",
+			"command": "D:\\msys64\\mingw64\\bin\\gcc.exe",
 			"args": [
 				"-fdiagnostics-color=always",
 				"-g",
@@ -12,7 +12,27 @@
 				"-o",
 				"${fileDirname}\\${fileBasenameNoExtension}.exe",
 				"-std=c++23",
- 				"-Mmodules"
+				"-Mmodules"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$gcc"
+			],
+			"group": "build",
+			"detail": "编译器: D:\\msys64\\mingw64\\bin\\gcc.exe"
+		},
+		{
+			"type": "cppbuild",
+			"label": "C/C++: g++.exe 生成活动文件",
+			"command": "D:\\msys64\\mingw64\\bin\\g++.exe",
+			"args": [
+				"-fdiagnostics-color=always",
+				"-g",
+				"${file}",
+				"-o",
+				"${fileDirname}\\${fileBasenameNoExtension}.exe"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
@@ -24,7 +44,7 @@
 				"kind": "build",
 				"isDefault": true
 			},
-			"detail": "compiler: D:\\msys64\\mingw64\\bin\\g++.exe"
+			"detail": "编译器: D:\\msys64\\mingw64\\bin\\g++.exe"
 		}
 	]
 }
