--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,34 +3,14 @@
 	"tasks": [
 		{
 			"type": "cppbuild",
-			"label": "C/C++: gcc.exe 生成活动文件",
-			"command": "D:\\msys64\\mingw64\\bin\\gcc.exe",
-			"args": [
-				"-fdiagnostics-color=always",
-				"-g",
-				"${file}",
-				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe",
-				"-std=c++23",
-				"-Mmodules"
-			],
-			"options": {
-				"cwd": "${fileDirname}"
-			},
-			"problemMatcher": [
-				"$gcc"
-			],
-			"group": "build",
-			"detail": "编译器: D:\\msys64\\mingw64\\bin\\gcc.exe"
-		},
-		{
-			"type": "cppbuild",
 			"label": "C/C++: g++.exe 生成活动文件",
 			"command": "D:\\msys64\\mingw64\\bin\\g++.exe",
 			"args": [
 				"-fdiagnostics-color=always",
 				"-g",
 				"${file}",
+				"-std=c++23",
+				"-Mmodules",
 				"-o",
 				"${fileDirname}\\${fileBasenameNoExtension}.exe"
 			],
